# CPD-Uniparthenope

res/: matrix.txt
src/: CMakeLists.txt  main.c  mtxtxt.c  p21fun.c  p21fun.h
